Implement image optimization with thumbnails and WebP
- Added `Pillow` and `python-magic` for secure image processing.
- Installed `libmagic1` system dependency in `backend/Dockerfile`.
- Created `ImageProcessingService` to validate, sanitize (strip EXIF), and generate optimized WebP variants (Medium, Thumbnail).
- Updated `R2StorageService` to handle uploading sets of image variants.
- Updated `R2StorageService` to generate signed URLs with `Content-Disposition: attachment` for downloads.
- Updated `DiveSite` and `Dive` routers to integrate image processing and expose `download_url`.
- Added `medium_url` and `thumbnail_url` columns to media tables via Alembic migration `0062`.
- Updated Frontend (`DiveSites.js`, `DiveSiteDetail.js`) to use optimized thumbnails, lazy loading, and added a Download button to the Lightbox.
- Fixed Frontend (`EditDiveSite.js`, `EditDive.js`, `CreateDive.js`) to correctly save `medium_url` and `thumbnail_url` and provide granular "Uploading..." feedback during submission.
- Improved frontend error handling to show detailed error messages (e.g. 413 File Too Large) during upload.
- Added `backend/scripts/generate_thumbnails.py` for backfilling existing media.
- Updated Nginx configuration (`dev.conf`, `prod.conf`) to allow 20MB uploads and return JSON errors for 413.
- Documented the architecture and implementation status in `docs/development/work/image_optimization_plan.md`.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
     pkg-config \
     netcat-openbsd \
+    libmagic1 \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
