--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -16,6 +16,9 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # Client body size limit
+    client_max_body_size 10M;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -35,16 +38,23 @@ http {
     upstream frontend {
         server divemap_frontend:3000;
     }
-    
+
     upstream backend {
         server divemap_backend:8000;
     }
- 
+
     # Main HTTP server
     server {
         listen 80;
         server_name localhost;
-        
+
+        # Custom error page for 413 Entity Too Large
+        error_page 413 /413.json;
+        location = /413.json {
+            return 413 '{"detail": "File too large. Maximum size is 10MB."}';
+            add_header Content-Type application/json;
+        }
+
         # LLM Content (Proxy to Backend)
         location = /llms.txt {
             proxy_pass http://backend/llm_content/llms.txt;
@@ -99,7 +109,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
+
         # Backend API routes - keep full path since FastAPI expects /api/v1/
         location /api/ {
             proxy_pass http://backend;
@@ -107,7 +117,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Backend specific settings - increased buffer sizes for large headers
             proxy_buffering on;
             proxy_buffer_size 16k;
@@ -125,18 +135,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
+
         # Backend documentation
         location /docs {
             proxy_pass http://backend;
             proxy_set_header Host $host;
         }
-        
+
         location /redoc {
             proxy_pass http://backend;
             proxy_set_header Host $host;
         }
-        
+
         location /openapi.json {
             proxy_pass http://backend;
             proxy_set_header Host $host;
