--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -77,6 +77,13 @@ http {
         listen 8000;
         server_name localhost;
 
+        # Custom error page for 413 Entity Too Large
+        error_page 413 /413.json;
+        location = /413.json {
+            return 413 '{"detail": "File too large. Maximum size is 10MB."}';
+            add_header Content-Type application/json;
+        }
+
         # Client IP handling from Fly.io proxy
         real_ip_header Fly-Client-IP;
         real_ip_recursive on;
