Add make target to purge Cloudflare cache
Introduce a `purge-cache` target in the Makefile to facilitate clearing
the Cloudflare cache for divemap.gr. This command utilizes the
Cloudflare API and requires `CLOUDFLARE_API_KEY` and
`CLOUDFLARE_ZONE_ID` to be set in the `.env` file.

- Load `.env` file in Makefile to access environment variables.
- Add `purge-cache` target with success/failure validation.
- Update `env.example` with necessary Cloudflare keys.
- Update frontend package-lock.json with minor dependency bumps.

--- a/env.example
+++ b/env.example
@@ -82,4 +82,8 @@ TURNSTILE_VERIFY_URL=https://challenges.cloudflare.com/turnstile/v0/siteverify
 # 2. Generate JWT secret using: openssl rand -hex 32
 # 3. Never commit .env file to version control
 # 4. Use different passwords for each service
-# 5. Rotate secrets regularly in production 
+# 5. Rotate secrets regularly in production
+
+### Cloudflare used by `make purge-cache`
+#CLOUDFLARE_API_KEY=your_cloudflare_api_key_here
+#CLOUDFLARE_ZONE_ID=your_cloudflare_zone_id_here
