--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -108,6 +108,23 @@ http {
             access_log off;
         }
 
+        # Service Worker - MUST NOT be cached
+        location = /sw.js {
+            root /usr/share/nginx/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Content-Type application/javascript;
+            expires off;
+            access_log on;
+        }
+
+        # Web Manifest - Correct Content-Type and MUST NOT be cached
+        location = /manifest.webmanifest {
+            root /usr/share/nginx/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Content-Type application/manifest+json;
+            expires off;
+        }
+
         # HTML files (short-lived cache)
         location = /index.html {
             root /usr/share/nginx/html;
