--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -55,6 +55,33 @@ http {
             add_header Content-Type application/json;
         }
 
+        # Service Worker - MUST NOT be cached
+        location = /sw.js {
+            proxy_pass http://frontend/dev-dist/sw.js;
+            proxy_set_header Host $host;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Content-Type application/javascript;
+            expires off;
+        }
+
+        # Workbox files for Service Worker
+        location ~ ^/(workbox-[a-f0-9]+\.js)$ {
+            proxy_pass http://frontend/dev-dist/$1;
+            proxy_set_header Host $host;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Content-Type application/javascript;
+            expires off;
+        }
+
+        # Web Manifest - Correct Content-Type and MUST NOT be cached
+        location = /manifest.webmanifest {
+            proxy_pass http://frontend/manifest.webmanifest;
+            proxy_set_header Host $host;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Content-Type application/manifest+json;
+            expires off;
+        }
+
         # LLM Content (Proxy to Backend)
         location = /llms.txt {
             proxy_pass http://backend/llm_content/llms.txt;
