Implement personalized chat recommendations and comparisons
- Add `PERSONAL_RECOMMENDATION` intent to suggest dive sites based on user certification level, history, and location.
- Add `COMPARISON` intent to compare certification levels across organizations.
- Update `ChatService` with logic for difficulty mapping (1-4) and shore access filtering.
- Refactor `OpenAIService` to return detailed token usage statistics.
- Update `ChatMessage` model and migration to store input/output/total tokens.
- Add comprehensive tests for recommendation and comparison logic.
- Update frontend components to support new suggestion flows.
- Update project plan documentation.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -39,6 +39,8 @@ services:
       - MAX_ACTIVE_SESSIONS_PER_USER=5
       - ENVIRONMENT=development
       - OPENAI_API_KEY=${OPENAI_API_KEY:-foobar}
+      - LLM_PROVIDER=${LLM_PROVIDER:-openai}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
       - CORS_ORIGINS=http://localhost
       - ALLOWED_ORIGINS=http://localhost
     volumes:
