--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -88,6 +88,7 @@ http {
         real_ip_header Fly-Client-IP;
         real_ip_recursive on;
         set_real_ip_from 0.0.0.0/0;
+        set_real_ip_from ::/0;
 
         # Header size limits for client requests
         large_client_header_buffers 8 16k;
@@ -229,6 +230,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
 
             # Backend specific settings - increased buffer sizes for large headers
             proxy_buffering on;
@@ -246,6 +248,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
         }
 
         # Special handling for dive-sites endpoint that can have large headers
@@ -394,6 +397,7 @@ http {
         location /health {
             proxy_pass http://backend;
             proxy_set_header Host $host;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_read_timeout 30s;
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
