Add chat subsystem models and encryption
Implement the foundation for the in-app chat subsystem (Phase 1)
by adding the database models and the Server-Side Envelope Encryption
logic.

- Add UserChatRoom, UserChatRoomMember, and UserChatMessage models.
- Create encryption_service.py using Fernet to secure message
  content at rest.
- Introduce an LRU cache for Room DEKs to prevent excessive CPU
  usage during symmetric decryption.
- Include unit tests to verify encryption, caching, and error handling.
- Add the technical implementation plan document outlining the
  optimized polling and SQS-based architecture.

--- a/env.example
+++ b/env.example
@@ -52,6 +52,10 @@ TURNSTILE_VERIFY_URL=https://challenges.cloudflare.com/turnstile/v0/siteverify
 #R2_SECRET_ACCESS_KEY=your_r2_secret_access_key_here
 #R2_BUCKET_NAME=your_r2_bucket_name_here
 
+# Chat Subsystem Configuration
+# Generate a secure secret: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+CHAT_MASTER_KEY=your_chat_master_key_here
+
 # AWS Configuration for Email Notifications (Optional)
 # If not configured, email notifications will not be sent
 # Get these from AWS Console: https://console.aws.amazon.com/
