Implement User Chat and Buddy system
Add full frontend and backend integration for the new user-to-user chat
and buddy request subsystem.

- Create Buddies page and components to manage friendship requests.
- Add Messages interface with ChatInbox and ChatRoom components.
- Integrate buddy and chat actions into the UserProfile page.
- Implement global unread chat badge in navigation bars using a new
  highly efficient `/unread-count` backend endpoint.
- Add system notifications for incoming and accepted buddy requests.
- Add "System & Social" category to user notification preferences.
- Introduce a dedicated ChatbotIcon for the AI Assistant to distinguish
  it from the new user messaging features.

--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -77,9 +77,16 @@ http {
         location = /manifest.webmanifest {
             proxy_pass http://frontend/manifest.webmanifest;
             proxy_set_header Host $host;
+            proxy_intercept_errors on;
+            error_page 404 = /empty-manifest.json;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             add_header Content-Type application/manifest+json;
             expires off;
+        }
+
+        location = /empty-manifest.json {
+            return 200 '{}';
+            add_header Content-Type application/manifest+json;
         }
 
         # LLM Content (Proxy to Backend)
