--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.3.4",
     "canvas-confetti": "^1.9.4",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
